# temporal-meetup-demo

./: .env  .env.example.aspecto  .env.example.honeycomb  .env.example.uptrace  .gitignore  Dockerfile  LICENSE  Makefile  README.md  batch_provisioning.sh  docker-compose-ghcr.yml  docker-compose-no-worker.yml  docker-compose.yml  go.mod  go.sum  main.go  opentelemetry.go  sample Workflow.md
.github/: dependabot.yml
.github/workflows/: ghcr-build-push-go.yml  ghcr-build-push-grpc.yml  ghcr-build-push-rust.yml  ghcr-build-push-worker.yml  ghcr-build-python.yml  ghcr-build-pythony.ml  golangci-lint.yml
dynamo/: dynamo.go
dynamodb-init/: init-tables.sh  items.json  table-definition.json
go-app/: Dockerfile  Dockerfile.grpc  Dockerfile.worker  go.mod  go.sum  main.go
go-app/api_service/: main.go
go-app/dynamo/: dynamo.go
go-app/grpc-server/: main.go
go-app/otel_instrumentation/: opentelemetry_setup.go  utils.go
go-app/protos/: README.md  simple.pb.go  simple.proto  simple_grpc.pb.go
kompose/: aws-cli-claim0-persistentvolumeclaim.yaml  aws-cli-deployment.yaml  dynamodb-admin-deployment.yaml  dynamodb-admin-service.yaml  dynamodb-local-claim0-persistentvolumeclaim.yaml  dynamodb-local-deployment.yaml  dynamodb-local-service.yaml  localstack-claim0-persistentvolumeclaim.yaml  localstack-claim1-persistentvolumeclaim.yaml  localstack-claim2-persistentvolumeclaim.yaml  localstack-deployment.yaml  localstack-service.yaml  testmount.yml
load-test/: load.js
localstack_init/: s3.sh
otel/: opentelemetry_setup.go
python-app/anomaly-detection/: .dockerignore  Dockerfile  README.md  pyproject.toml
python-app/anomaly-detection/anomaly_detection/: main.py
rust-app/: .dockerignore  Cargo.toml  Dockerfile  README.md
rust-app/src/: main.rs
s3/: s3.go
starter/: main.go  starter.go
utils/: utils.go
worker/: main.go
workflow/: workflow.go
(+6 files in other folders)
