[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.2"
log = "0.4"
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry-appender-tracing = "0.3.0"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry-http = "0.10.0"
opentelemetry-otlp = "0.14.0"
actix-web-opentelemetry = "0.17.0"
dotenv = "0.15.0"

[[bin]]
name = "rust-app"
path = "src/main.rs"
doc = false
